Make sure headings are visible when an anchor is clicked.

--- a/css/main.scss
+++ b/css/main.scss
@@ -270,11 +270,13 @@ main {
   }
 
   h1 {
-    margin-top: 130px;
+    padding-top: 130px;
+    padding-top: 80px;
   }
 
   h2 {
     margin-top: 80px;
+    padding-top: 80px;
   }
 
   p, li {
